--- a/project/index.html
+++ b/project/index.html
@@ -3,267 +3,40 @@
   <title>COVID Explorer</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      font-family: "Open Sans", sans-serif;
-    }
-    .country {
-      stroke-width: 1;
-      stroke: darkslategrey;
-      fill: white;
-      transition: all 0.25s ease-in-out;
-    }
 
-    .country:hover {
-      cursor: pointer;
-      fill: #555555;
-    }
-
-    div.tooltip {
-      position: absolute;
-      text-align: center;
-      min-width: 60px;
-      transition: opacity 0.25s ease-in-out;
-      min-height: 28px;
-      padding: 8px 12px;
-      font: 12px sans-serif;
-      background: white;
-      border: 1px solid lightgray;
-      border-radius: 4px;
-      pointer-events: none;
-    }
-
-    button {
-      background: transparent;
-      border: 1px solid lightgray;
-      border-radius: 4px;
-      padding: 4px 16px;
-      transition: all 0.25s ease-in-out;
-    }
-
-    button:hover {
-      cursor: pointer;
-      border: 1px solid darkgray;
-    }
-  </style>
-  <!-- <script src="json/world.js"></script> -->
-  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="./libs/d3.min.js"></script>
+  <script src="./libs/d3-tip.min.js"></script>
+  <!-- <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/d3-tip@0.9.1/dist/index.min.js"></script> -->
   <script src="https://d3js.org/topojson.v2.min.js"></script>
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/d3-tip@0.9.1/dist/index.min.js"></script>
-  <title></title>
+  <script src="./libs/lodash.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+
+  <script src="./js/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="./styles/custom.css"/>
 </head>
 <body>
-<!-- <h1>Life Expectancy of the World Between 2000-2019</h1> -->
-<div style="display:flex; align-items: center">
+    <div class='toolbar'>
+      <span class='option'>
+        <span class='caption'>Mode</span>
+        <select id="drp-mode"></select>
+      </span>
+      <span class='option'>
+        <span class='caption'>Property</span>
+        <select id="drp-property"></select>
+      </span>
+    </div>
 <!--  These styles create the bounding box-->
   <div style="overflow: hidden; border: 1px solid black;">
-    <div class="home"></div>
+    <div class="world-map"></div>
   </div>
-  <!-- <div style="margin-left: 24px">
-    <h2 id="currentYear">2000</h2>
-    <button style="background: rgb(240,246,253)" onclick="subtractYearAndRerender()">
-      <
-    </button>
 
-    <button style="background: rgb(244,249,254)" onclick="addYearAndRerender()">
-      >
-    </button> -->
-</div>
-
-  </div>
 </body>
-
-<script>
-   // https://soshace.com/advanced-mapmaking-using-d3-d3-scale-and-d3-zoom-with-changing-data-to-create-sophisticated-maps/
-  function addYearAndRerender() {
-      currentYear  = currentYear + 1;
-      reRender(currentYear);
-  }
-
-  function subtractYearAndRerender() {
-      currentYear = currentYear - 1;
-      reRender(currentYear);
-  }
-</script>
-
-<script>
-    let currentYear = 2021;
-    const width = 1000;
-    const height = 700;
-    let total_cases;
-
-    const projection = d3.geoMercator()
-        .translate([width / 2, window.innerHeight / 1.4])    // translate to center of screen
-        .scale([150]);
-
-    const path = d3.geoPath().projection(projection);
-    let zoom = d3.zoom()
-        .scaleExtent([1, 10])
-        .translateExtent([[-500,-300], [1500, 1000]])
-        .on('zoom', () => {
-            // svg.attr('transform', d3.event.transform)
-        });
-
-    const container = d3.select(".home");
-    const svg = container.append("svg");
-
-    const tooltip = d3.tip().attr('class', 'tooltip')
-        .html(function (d) {
-            if (d.country) {
-              update_tooltip_position(tooltip);
-              const cases = d.total_cases.toLocaleString('en-US');
-              return `<div>
-                <p>Country: ${d.country}</p>
-                <p>Infected: ${cases}</p>
-              </div>`;
-            }
-        });
-
-    svg.on('mousedown', function (d) {
-        tooltip.hide()
-    });
-    svg.attr("width", width)
-        .attr("height", height)
-      //.style("background", 'ivory')
-        .append('g')
-        .call(tooltip);
-
-    container.call(zoom);
-
-    let last_country;
-    const render = (path, data) => svg.selectAll()
-        .data(data)
-        .enter()
-        .append('path')
-        .attr('d', path)
-        .attr('class', 'country')
-        .style('fill', function (d) {
-          return fill_country(d, 'out');
-        })
-        .on('mouseover', function (d) {
-            d3.select(this)
-            .style('fill', function () {
-              return fill_country(d, 'over');
-            });
-            last_country = d.country;
-            update_tooltip_position(tooltip)
-            tooltip.show(d, this)
-        })
-        .on('mouseout', function (d) {
-            d3.select(this)
-            .style('fill', function (d) {
-                return fill_country(d, 'out');
-            });
-            if (last_country !== d.country || !d.country) {
-              tooltip.hide()
-            }
-        })
-        .on("mousemove", function(d){
-            update_tooltip_position(tooltip);
-            if (!d.country) {
-              tooltip.hide()
-            }
-        })
-        .on('mousedown', function (d) {
-            tooltip.hide()
-        });
-
-    load_data(render, currentYear);
-    // function reRender(year) {
-    //     d3.csv(covidCsv).then(data => {
-    //       max_case = number(_.maxBy(data, 'total_cases').total_cases);
-    //         d3.json(worldMapJson).then(worldMap => {
-
-    //             let mapData = getYearData(data, year, worldMap, true);
-    //             let extent = d3.extent(mapData, d => d['total_cases']);
-
-    //             let colorScale = d3.scaleSequential(d3.interpolateRdYlBu)
-    //                 .domain(extent)
-
-    //             let element = document.getElementById('currentYear');
-    //             element.innerHTML = year;
-    //             render(path, mapData, colorScale);
-    //         });
-    //     });
-    // }
-
-    function transformData(data, currentYear) {
-        let newArr = _.map(data, (record) => {
-          const year = new Date(record['last_updated_date']).getFullYear();
-          const total_cases = Number(Number(record['total_cases'] || 0).toFixed(0));
-          return {
-              country: record['location'],
-              total_cases,
-              code: record['iso_code'],
-              date: record['last_updated_date'],
-              year
-          };
-        });
-
-        return _.filter(newArr, today => {
-            return today['year'] === currentYear;
-        });
-    }
-
-    function getYearData(data, currentYear, worldMap, transform) {
-        let currentYearArray = [];
-        if (transform) {
-            currentYearArray = transformData(data, currentYear);
-        }
-        else {
-            currentYearArray = data;
-        }
-
-        const c_data = _(currentYearArray)
-            .keyBy('code')
-            .merge(_.keyBy(worldMap.features, 'properties.iso_a3'))
-            .values()
-            .value();
-
-        return c_data;
-    }
-
-    function update_tooltip_position(tooltip) {
-        // console.log(d3.event.pageY)
-        tooltip
-          .style("left", d3.event.pageX - 50 + "px")
-          .style("top", d3.event.pageY + 15 + "px")
-    }
-
-    function fill_country(d, action) {
-      let perc = Number(d.total_cases || 0) * 100 /total_cases;
-      perc = perc > 1 ? 1 : perc;
-      const factor = action === 'over' ? 0.6 : 1;
-      perc = perc * factor;
-      const color = `rgba(255, 0, 0, ${perc})`;
-      return color;
-    }
-
-    async function load_data(render, currentYear) {
-      let covidCsv = './data1/covid.csv';
-      let worldMapJson = 'https://raw.githubusercontent.com/Bradleykingz/working-with-d3/master/files/world.geo.json'
-      const data = await d3.csv(covidCsv);
-      const worldMap = await d3.json(worldMapJson);
-
-      total_cases = _.reduce(data, (sum, item) => {
-        return sum += Number(item.total_cases || 0);
-      }, 0);
-
-      let mapData = getYearData(data, currentYear, worldMap, true);
-      let extent = d3.extent(mapData, d => d['total_cases']);
-      render(path, mapData);
-
-    }
-</script>
