data source added and shows vaccinated in map

--- a/project/index.html
+++ b/project/index.html
@@ -31,6 +31,10 @@
         <span class='caption'>By</span>
         <select id="drp-percent-type"></select>
       </span>
+      <span class='option'>
+        <span class='caption'>Data Source</span>
+        <select id="drp-data-source"></select>
+      </span>
     </div>
 <!--  These styles create the bounding box-->
   <div class='container-box'>
