added bar chart

--- a/project/index.html
+++ b/project/index.html
@@ -15,6 +15,7 @@
 
   <script src="./js/init.js"></script>
   <script src="./js/world-map.js"></script>
+  <script src="./js/chart.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/custom.css"/>
 </head>
 <body>
@@ -40,7 +41,7 @@
   <div class='container-box'>
     <div class="world-map item"></div>
     <div class="table item">Table</div>
-    <div class="chart item">Chart</div>
+    <div class="chart item"></div>
   </div>
 
 </body>
