--- a/project/index.html
+++ b/project/index.html
@@ -47,7 +47,7 @@
           <span class='play-text'>Play</span>
           <span class='pause-text'>Pause</span>
         </button>
-        <input type="range" id='range' value="0" step="1">
+        <input type="range" id='slider-range' value="0" step="1" onmouseover="stopPlay()" onmouseout="togglePlay()" onclick="resetSlider()">
       </div>
     </div>
   </div>
