--- a/project/area.html
+++ b/project/area.html
@@ -25,94 +25,21 @@ window.onload = function () {
 }
 
 async function draw() {
-  // set the dimensions and margins of the graph
-var margin = {top: 20, right: 20, bottom: 30, left: 50},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
-
-// parse the date / time
-var parseTime = d3.timeParse("%d-%b-%y");
-
-// set the ranges
-var x = d3.scaleTime().range([0, width]);
-var y = d3.scaleLinear().range([height, 0]);
-
-// define the area
-var	area = d3.area()	
-    .x(function(d) { return x(d.date); })	
-    .y0(height)					
-    .y1(function(d) { return y(d.close); });
-
-// append the svg obgect to the body of the page
-// appends a 'group' element to 'svg'
-// moves the 'group' element to the top left margin
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform",
-          "translate(" + margin.left + "," + margin.top + ")");
+  width = 954
+  height = 700
   
-  
-          
-// Get the data
-d3.csv("./data.csv").then(function(data) {
+  const keys = d3.range(1790, 2000, 10);
+  const [regions, states] = await Promise.all([
+    FileAttachment("./data/census-regions.csv").text(),
+    FileAttachment("./data/population.tsv").text()
+  ]).then(([regions, states]) => [
+    d3.csvParse(regions),
+    d3.tsvParse(states, (d, i) => i === 0 ? null : ({name: d[""], values: keys.map(key => +d[key].replace(/,/g, ""))}))
+  ]);
+  const regionByState = new Map(regions.map(d => [d.State, d.Region]));
+  const divisionByState = new Map(regions.map(d => [d.State, d.Division]));
+  data = {keys, group: d3.group(states, d => regionByState.get(d.name), d => divisionByState.get(d.name))};
 
-    // format the data
-    data.forEach(function(d) {
-        d.date = new Date(d.date);
-        d.close = +d.close;
-    });
-
-    // Scale the range of the data
-    x.domain(d3.extent(data, function(d) { return d.date; }));
-    y.domain([0, d3.max(data, function(d) { return d.close; })]);
-
-    // set the gradient
-    svg.append("linearGradient")				
-      .attr("id", "area-gradient")			
-      .attr("gradientUnits", "userSpaceOnUse")	
-      .attr("x1", 0).attr("y1", y(0))			
-      .attr("x2", 0).attr("y2", y(1000))		
-    .selectAll("stop")						
-      .data([								
-        {offset: "0%", color: "red"},		
-        {offset: "30%", color: "red"},	
-        {offset: "45%", color: "black"},		
-        {offset: "55%", color: "black"},		
-        {offset: "60%", color: "lawngreen"},	
-        {offset: "100%", color: "lawngreen"}	
-      ])					
-    .enter().append("stop")			
-      .attr("offset", function(d) { return d.offset; })	
-      .attr("stop-color", function(d) { return d.color; });
-
-    // Add the area.
-    svg.append("path")
-        .data([data])
-        .attr("class", "area")
-        .attr("d", area);
-
-    // Add the X Axis
-    svg.append("g")
-        .attr("transform", "translate(0," + height + ")")
-        .call(d3.axisBottom(x));
-
-    // Add the Y Axis
-    svg.append("g").call(d3.axisLeft(y));
-
-
-    let zoom = d3.zoom()
-      .scaleExtent([1, 10])
-      .translateExtent([[-500,-300], [1500, 1000]])
-      .on('zoom', (event) => {
-          svg.attr('transform', event.transform)
-      });
-
-
-    svg.call(zoom);
-
-  });
 
 }
 
