--- a/project/index.html
+++ b/project/index.html
@@ -26,22 +26,34 @@
         <span class='caption'>Mode</span>
         <select id="drp-mode"></select>
       </span>
-      <span class='option field-prop'>
+      <span class='item option field-prop'>
         <span class='caption'>Property</span>
         <select id="drp-property"></select>
       </span>
-      <span class='option calc-by'>
+      <span class='item option calc-by'>
         <span class='caption'>By</span>
         <select id="drp-percent-type"></select>
       </span>
-      <span class='option data-source'>
+      <span class='item option data-source'>
         <span class='caption'>Data Source</span>
         <select id="drp-data-source"></select>
       </span>
-      <span class='option chart-option'>
+      <span class='item option chart-option'>
         <span class='caption'>Chart Type</span>
         <select id="drp-chart-type"></select>
       </span>
+      <span class='item option table-filter-fields'>
+        <span class='caption'>Filter By</span>
+        <select id="drp-table-fields"></select>
+      </span>
+      <span class='item table-filter-range'>
+        <span>Between</span>
+        <input id='range-start' type="number">
+        <span>and</span>
+        <input id='range-end' type="number">
+      </span>
+      <input type='button' value="Apply" class='item btn-apply-filter'>
+      <input type='button' value="Clear Filter" class='item btn-clear-filter'>
     </div>
 <!--  These styles create the bounding box-->
   <div class='container-box'>
