--- a/project/index.html
+++ b/project/index.html
@@ -42,6 +42,10 @@
         <span class='caption'>Chart Type</span>
         <select id="drp-chart-type"></select>
       </span>
+      <span class='item option progress-mode'>
+        <input type="checkbox" id="chk-progress" value="true">
+        <label for="chk-progress">Progress</label><br>
+      </span>
       <span class='item option table-filter-fields'>
         <span class='caption'>Filter By</span>
         <select id="drp-table-fields"></select>
