--- a/project/index.html
+++ b/project/index.html
@@ -12,6 +12,7 @@
   <!-- <script src="./libs/d3-fetch.v1.min.js"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script> -->
   <script src="./libs/lodash.min.js"></script>
+  <script src="./libs/moment.js"></script>
   <script src="./libs/jquery-3.6.0.min.js"></script>
 
   <script src="./js/init.js"></script>
@@ -42,9 +43,9 @@
         <span class='caption'>Chart Type</span>
         <select id="drp-chart-type"></select>
       </span>
-      <span class='item option progress-mode'>
+      <span class='item option progress-checkbox'>
         <input type="checkbox" id="chk-progress" value="true">
-        <label for="chk-progress">Progress</label><br>
+        <label for="chk-progress">Incremental Progress</label><br>
       </span>
       <span class='item option table-filter-fields'>
         <span class='caption'>Filter By</span>
