overall big improvement

--- a/project/index.html
+++ b/project/index.html
@@ -45,7 +45,7 @@
       </span>
       <span class='item option progress-checkbox'>
         <input type="checkbox" id="chk-progress" value="true">
-        <label for="chk-progress">Incremental Progress</label><br>
+        <label for="chk-progress">Temporal Update</label><br>
       </span>
       <span class='item option table-filter-fields'>
         <span class='caption'>Filter By</span>
