Allowed country selection in line chart

--- a/project/index.html
+++ b/project/index.html
@@ -47,6 +47,7 @@
         <input type="checkbox" id="chk-progress" value="true">
         <label for="chk-progress">Daily Update</label><br>
       </span>
+      <input type='button' value="Change Country" class='item btn-change-country'>
       <span class='item option table-filter-fields'>
         <span class='caption'>Filter By</span>
         <select id="drp-table-fields"></select>
@@ -74,6 +75,9 @@
           <input type="range" id='slider-range' value="0" step="1" onmouseover="stopPlay()" onmouseout="togglePlay()" onclick="resetSlider()">
         </div>
       </span>
+      <div class='country-list'>
+        <input type='button' value="Apply" class='btn-apply-country-sel'>
+      </div>
     </div>
   </div>
 
