--- a/project/index.html
+++ b/project/index.html
@@ -35,10 +35,10 @@
         <span class='caption'>By</span>
         <select id="drp-percent-type"></select>
       </span>
-      <span class='item option data-source'>
+      <!-- <span class='item option data-source'>
         <span class='caption'>Data Source</span>
         <select id="drp-data-source"></select>
-      </span>
+      </span> -->
       <span class='item option chart-option'>
         <span class='caption'>Chart Type</span>
         <select id="drp-chart-type"></select>
